--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!-- my-svelte-app/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>NeuroDevOps Telemetry</title>
+  <title>Telemetry Dashboard</title>
 </head>
 <body>
-  <!-- This is where your Svelte app will mount -->
+  <!-- this is where Svelte will render your App.svelte -->
+  <div id="app"></div>
+
+  <!-- point to your entrypoint -->
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
