--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
+<!-- dashboard/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Telemetry Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Network Dashboard</title>
 </head>
 <body>
-  <!-- this is where Svelte will render your App.svelte -->
   <div id="app"></div>
-
-  <!-- point to your entrypoint -->
   <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
