--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!-- index.html at your project root -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeuroDevOps Dashboard</title>
-    <script type="module" src="/src/main.js"></script>
-    <!-- or src/main.js if you’re using plain JS -->
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>NeuroDevOps Dashboard</title>
+</head>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
 </html>
